@@ -1,0 +1,95 @@
+/*
+ * Copyright 2002-2015 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.web.bind.annotation;
+
+import java.lang.annotation.Annotation;
+import java.lang.annotation.Documented;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+import org.springframework.core.annotation.AliasFor;
+
+/**
+ * A convenience annotation that is itself annotated with
+ * {@link ControllerAdvice @ControllerAdvice}
+ * and {@link ResponseBody @ResponseBody}.
+ *
+ * <p>Types that carry this annotation are treated as controller advice where
+ * {@link ExceptionHandler @ExceptionHandler} methods assume
+ * {@link ResponseBody @ResponseBody} semantics by default.
+ *
+ * @author Rossen Stoyanchev
+ * @since 4.3
+ */
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@ControllerAdvice
+@ResponseBody
+public @interface RestControllerAdvice {
+
+	/**
+	 * Alias for the {@link #basePackages} attribute.
+	 * <p>Allows for more concise annotation declarations e.g.:
+	 * {@code @ControllerAdvice("org.my.pkg")} is equivalent to
+	 * {@code @ControllerAdvice(basePackages="org.my.pkg")}.
+	 * @see #basePackages()
+	 */
+	@AliasFor("basePackages")
+	String[] value() default {};
+
+	/**
+	 * Array of base packages.
+	 * <p>Controllers that belong to those base packages or sub-packages thereof
+	 * will be included, e.g.: {@code @ControllerAdvice(basePackages="org.my.pkg")}
+	 * or {@code @ControllerAdvice(basePackages={"org.my.pkg", "org.my.other.pkg"})}.
+	 * <p>{@link #value} is an alias for this attribute, simply allowing for
+	 * more concise use of the annotation.
+	 * <p>Also consider using {@link #basePackageClasses()} as a type-safe
+	 * alternative to String-based package names.
+	 */
+	@AliasFor("value")
+	String[] basePackages() default {};
+
+	/**
+	 * Type-safe alternative to {@link #value()} for specifying the packages
+	 * to select Controllers to be assisted by the {@code @ControllerAdvice}
+	 * annotated class.
+	 * <p>Consider creating a special no-op marker class or interface in each package
+	 * that serves no purpose other than being referenced by this attribute.
+	 */
+	Class<?>[] basePackageClasses() default {};
+
+	/**
+	 * Array of classes.
+	 * <p>Controllers that are assignable to at least one of the given types
+	 * will be assisted by the {@code @ControllerAdvice} annotated class.
+	 */
+	Class<?>[] assignableTypes() default {};
+
+	/**
+	 * Array of annotations.
+	 * <p>Controllers that are annotated with this/one of those annotation(s)
+	 * will be assisted by the {@code @ControllerAdvice} annotated class.
+	 * <p>Consider creating a special annotation or use a predefined one,
+	 * like {@link RestController @RestController}.
+	 */
+	Class<? extends Annotation>[] annotations() default {};
+
+}
